[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edap30"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "pandas",
    "seaborn",
    "jupyterlab",
    "jupyter",
    "tqdm",
    "torch",
    "torchvision",
    "datasets",
    "pathlib",
    "tensorboard",
    "ipywidgets"
]
